--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .nav {
-  background-color: #E6E6FA;
+  background-image: url("backgroun.jpeg");
   color: #000000;
   list-style: none;
   text-align: center;
