--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
   font-family: 'Ariel',serif;
   font-size: 20;
   position: fixed;
-  width: 100%;
-  height: 40hv;
+  width: 100%
 }
 
 .nav {
@@ -14,7 +13,7 @@
   color: #000000;
   list-style: none;
   text-align: center;
-  padding: 20px 0 20px 0;
+  padding: 40px 0 40px 0;
 
 }
 
