--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+root { 
+display: block;
+}
+body {
+background-color: #586B5E;
+}
+.bigbox {
+margin-left:auto;
+margin-right:auto;
+width:780px;
+height:560px;
+background-color:#3EB489;
+border: 1px solid #3EB489;
+padding: 5px;
+-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
+border-radius: 10px; /* future proofing */
+-khtml-border-radius: 10px; /* for old Konqueror browsers */
+box-shadow: 0px 0px 20px #CCD9C8;
+-webkit-box-reflect: below 15px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(85%, transparent), to(rgba(255,255,255,0.2)));
+}
 
 #mybar{
   margin: 0;
@@ -5,7 +26,7 @@
   font-family: 'Ariel',serif;
   font-size: 20;
   position: fixed;
-  width: 100%
+  width: 110%
   top: 0;
     left: 0;
     z-index: 999;
