--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ root {
 display: block;
 }
 body {
-background-color: #586B5E;
+background-color: #000000;
 }
 .bigbox {
 margin-left:auto;
@@ -26,7 +26,7 @@ box-shadow: 0px 0px 20px #CCD9C8;
   font-family: 'Ariel',serif;
   font-size: 20;
   position: fixed;
-  width: 110%
+  width: 2048px
   top: 0;
     left: 0;
     z-index: 999;
