--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ box-shadow: 0px 0px 20px #CCD9C8;
 -webkit-box-reflect: below 15px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(85%, transparent), to(rgba(255,255,255,0.2)));
 }
 
+.column {
+  float: left;
+}
+
+.left {
+  width: 33%;
+}
+
+.right {
+  width: 67%;
+}
+
 #mybar{
   margin: 0;
   padding: 0;
