--- a/style.css
+++ b/style.css
@@ -32,6 +32,19 @@ box-shadow: 0px 0px 20px #CCD9C8;
   width: 67%;
 }
 
+.prjct-btn{
+  background-color: #F9F6F0;
+  color: #000000;
+  border-width: 3px;
+  border-color: #000000;
+  border-radius: 10px;
+  padding: 7px 21px;
+}
+.prjct-btn:hover{
+  background-color: #3EB489;
+    transition: 0.7s;
+}
+
 #mybar{
   margin: 0;
   padding: 0;
