--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ root {
 display: block;
 }
 body {
-background-color: #F9E4BC;
+background-color: #E6DDC5;
 }
 .bigbox {
 margin-left:auto;
@@ -33,7 +33,7 @@ box-shadow: 0px 0px 20px #CCD9C8;
 }
 
 .prjct-btn{
-  background-color: #F9E4BC;
+  background-color: #E6DDC5;
   color: #000000;
   border-width: 3px;
   border-color: #000000;
