--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ root {
 display: block;
 }
 body {
-background-color: #E6DDC5;
+background-color: #E7D4C0;
 }
 .bigbox {
 margin-left:auto;
@@ -22,7 +22,7 @@ box-shadow: 0px 0px 20px #CCD9C8;
 
 
 .prjct-btn{
-  background-color: #E6DDC5;
+  background-color: #E7D4C0;
   color: #000000;
   border-width: 3px;
   border-color: #000000;
