--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ box-shadow: 0px 0px 20px #CCD9C8;
   font-family: 'Ariel',serif;
   font-size: 20;
   position: fixed;
-  width: 100%;
+  width: 3000px;
   top: 0;
     left: 0;
     z-index: 999;
