--- a/style.css
+++ b/style.css
@@ -68,10 +68,12 @@ box-shadow: 0px 0px 20px #CCD9C8;
 #fixed-text{
   positon: fixed;
   width: 40%;
+  text-align: center;
 }
 #fixed-imgs{
   position: fixed;
   width: 40%;
+  text-align: center;
 }
 
 #logo{
