--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ box-shadow: 0px 0px 20px #CCD9C8;
   display: inline-block;
   padding: 0 25px 0 25px;
 }
-.nav > li > a{
+.nav > a{
   text-decoration: none;
   color: #000000;
 }
