--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ img {
 
 footer{
   width: 100%;
-  background-color: #3EB489;
+  background-color: #E7D4C0;
   text-align: center;
   color: #000000;
   padding: 25px 25px 25px 25px;
