--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ background-color: #E7D4C0;
   border-radius: 10px;
   padding: 7px 21px;
   transition: 0.7s;
+  min-width: 100px;
 }
 .prjct-btn:hover{
   background-color: #3EB489;
