--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ background-color: #E7D4C0;
 
 
 .prjct-btn{
-  background-color: #E7D4C0;
+  background-color: #FF75D8;
   color: #000000;
   border-width: 3px;
   border-color: #000000;
   border-radius: 10px;
-  padding: 50px 150px;
+  padding: 20px 60px;
   transition: 0.7s;
   min-width: 100px;
+  font-size: 40px;
 }
 .prjct-btn:hover{
   background-color: #3EB489;
