--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ background-color: #E7D4C0;
 .prjct-btn:hover{
   background-color: #3EB489;
     transition: 0.7s;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 #mybar{
