--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ root {
 display: block;
 }
 body {
-background-color: #E7D4C0;
+background-color: #f6f3eb;
 }
 
 
 .prjct-btn{
-  background-color: #E7D4C0;
+  background-color: #f6f3eb;
   color: #000000;
   border-width: 3px;
   border-color: #000000;
