--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ background-color: #f6f3eb;
     transition: 0.7s;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.social-btn{
+  width: 10px;
+  background-color: #f6f3eb;
+}
+.logo{
+  border-width: 0px;
+}
 
 #mybar{
   margin: 0;
