--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ background-color: #f6f3eb;
   width: 10px;
   height: 10px;
   background-color: #f6f3eb;
+  border-width: #f6f3eb;
 }
 .logo{
   border-width: 0px;
