--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ background-color: #f6f3eb;
   border-width: #f6f3eb;
   padding: 12px 16px; /* Some padding */
 }
+.social-btn:hover{
+  background-color: #3EB489;
+    transition: 0.7s;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
 
 .class{
   cursor: url(images-folder/cursor-image.png), auto;
