--- a/style.css
+++ b/style.css
@@ -36,10 +36,11 @@ background-color: #f6f3eb;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .youtube-btn{
-  color:transparent
+  color:transparent;
+  border: none;
 }
 .youtube-btn{
-  color:black
+  color:black;
 }
 
 .class{
