--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ background-color: #f6f3eb;
 .youtube-btn{
   color:transparent;
   border: none;
+  background: none;
 }
 .youtube-btn{
   color:black;
