--- a/style.css
+++ b/style.css
@@ -35,12 +35,20 @@ background-color: #f6f3eb;
     transition: 0.7s;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.youtube-btn{
+.multiverse-btn{
   color:transparent;
   border: none;
-  background: none;
+  background: multiverse.jpeg;
 }
-.youtube-btn{
+.multiverse-btn{
+  color:black;
+}
+.phoenix-btn{
+  color:transparent;
+  border: none;
+  background: multiverse.jpeg;
+}
+.phoenix-btn{
   color:black;
 }
 
