--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ background-color: #f6f3eb;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .multiverse-btn{
-  color:transparent;
+  color: rgba(0, 0, 0, 0.5);;
   border: none;
   background: multiverse.jpeg;
 }
@@ -44,7 +44,7 @@ background-color: #f6f3eb;
   color:black;
 }
 .phoenix-btn{
-  color:transparent;
+  color: rgba(0, 0, 0, 0.5);
   border: none;
   background: multiverse.jpeg;
 }
