--- a/style.css
+++ b/style.css
@@ -35,13 +35,24 @@ background-color: #f6f3eb;
     transition: 0.7s;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.youtube-btn{
-  color: rgba(0, 0, 0, 0.5);
+.phoenix-btn{
+  color: transparent;
   border: none;
   padding: 40px 120px;
+  background-image: url('phoenix.jpeg)
   background-position:center;
 }
-.youtube-btn:hover{
+.phoenix-btn:hover{
+  color:black;
+}
+.multiverse-btn{
+  color: transparent;
+  border: none;
+  padding: 40px 120px;
+  background-image: url('multiverse.jpeg)
+  background-position:center;
+}
+.multiverse-btn:hover{
   color:black;
 }
 
