--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ background-color: #f6f3eb;
   color: transparent;
   border: none;
   padding: 40px 120px;
-  background-image: url('phoenix.jpeg);
+  background-image: url('phoenix.jpeg');
   background-position:center;
 }
 .phoenix-btn:hover{
@@ -49,7 +49,7 @@ background-color: #f6f3eb;
   color: transparent;
   border: none;
   padding: 40px 120px;
-  background-image: url('multiverse.jpeg);
+  background-image: url('multiverse.jpeg');
   background-position:center;
 }
 .multiverse-btn:hover{
