--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ background-color: #f6f3eb;
   background-image: url('phoenix.jpeg');
   background-position:center;
   background-size: 150px;
+  transition: 0.7s;
 }
 .phoenix-btn:hover{
   transition: 0.7s;
@@ -54,6 +55,7 @@ background-color: #f6f3eb;
   background-image: url('multiverse.jpeg');
   background-position:center;
   background-size: 150px;
+  transition: 0.7s;
 }
 .multiverse-btn:hover{
   transition: 0.7s;
