--- a/style.css
+++ b/style.css
@@ -41,9 +41,10 @@ background-color: #f6f3eb;
   padding: 40px 120px;
   background-image: url('phoenix.jpeg');
   background-position:center;
-  background-size: 400px;
+  background-size: 500px;
   transition: 0.7s;
   width: 140%;
+  height: 70%;
 }
 .phoenix-btn:hover{
   transition: 0.7s;
@@ -55,9 +56,10 @@ background-color: #f6f3eb;
   padding: 40px 120px;
   background-image: url('multiverse.jpeg');
   background-position:center;
-  background-size: 400px;
+  background-size: 500px;
   transition: 0.7s;
   width: 140%;
+  height: 70%;
 }
 .multiverse-btn:hover{
   transition: 0.7s;
